Adicionado utils Adicionado melhoria na autenticação