@@ -1,8 +1,8 @@
 package com.ltk.api.solar.services;
 
-import com.ltk.api.solar.config.UserDetailsImpl;
 import com.ltk.api.solar.models.User;
 import com.ltk.api.solar.repositories.springrepository.IUserSpringRepository;
+import com.ltk.api.solar.tos.login.UserDetailsImplTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -10,7 +10,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 @Service
@@ -28,8 +28,11 @@ public class JwtUserDetailsService implements UserDetailsService {
 			// find by email
 		}
 		
-		if (user.isPresent()) {
-			return UserDetailsImpl.builder().user(user.get()).roles(Arrays.asList(new SimpleGrantedAuthority("ADMIN"))).build();
+		if(user.isPresent()) {
+			return UserDetailsImplTO.builder()
+					.user(user.get())
+					.roles(List.of(new SimpleGrantedAuthority("ADMIN")))
+					.build();
 		} else {
 			throw new UsernameNotFoundException("User not found with login: " + username);
 		}
